validation and global exception handle